--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "linfo/laravel",
   "description": "This is a Laravel 5 Wrapper for the linfo package from jrgp",
+  "keywords": ["laravel","health","system","load"],
+  "homepage": "http://linfo.gummibeer.de",
   "require": {
     "php": ">=5.5.0",
     "illuminate/support": "5.*",
@@ -14,7 +16,9 @@
   "authors": [
     {
       "name": "Tom Witkowski",
-      "email": "dev.gummibeer@gmail.com"
+      "email": "dev.gummibeer@gmail.com",
+      "homepage": "https://github.com/Gummibeer",
+      "role": "Developer"
     }
   ],
   "support": {
