--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,11 @@ addons:
     code_climate:
         repo_token: ${CC_TOKEN}
 
+## List all OS to test with
+os:
+  - linux
+  - osx
+
 ## List all PHP versions to test with
 php:
   - 5.5
@@ -40,7 +45,7 @@ before_script:
 script:
   - vendor/bin/phpunit
   - vendor/bin/test-reporter
-  - php CoverageChecker.php build/logs/clover.xml 75
+  - php CoverageChecker.php build/logs/clover.xml 70
 
 ## Send Build Notifications to Slack
 notifications:
