--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "php": ">=5.5.0",
     "illuminate/support": "~5.0",
     "nesbot/carbon": "~1.19",
-    "linfo/linfo": "dev-master"
+    "linfo/linfo": "^3.0"
   },
   "require-dev": {
     "laravel/framework": "~5.0",
