--- a/.travis.yml
+++ b/.travis.yml
@@ -39,5 +39,7 @@ before_script:
 ## Run test Scripts
 script:
   - vendor/bin/phpunit
-  - vendor/bin/test-reporter
   - php CoverageChecker.php build/logs/clover.xml 70
+  
+after_script:
+  - vendor/bin/test-reporter
