add laravel auto discover

--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,12 @@
       "tests/TestCase.php"
     ]
   },
-  "minimum-stability": "stable"
+  "minimum-stability": "stable",
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Linfo\\Laravel\\LinfoServiceProvider"
+      ]
+    }
+  }
 }
