--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "provide": {
     "linfo/linfo": "~4.0"
   },
-  "license": "GPL-3.0",
+  "license": "MIT",
   "authors": [
     {
       "name": "Tom Witkowski",
