--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Tom Witkowski",
-      "email": "dev.gummibeer@gmail.com",
-      "homepage": "https://gummibeer.de",
-      "role": "Developer"
+     "name": "Tom Witkowski",
+            "email": "gummibeer@astrotomic.info",
+            "homepage": "https://gummibeer.de",
+            "role": "Developer"
     }
   ],
   "require": {
@@ -49,10 +49,11 @@
       "tests/TestCase.php"
     ]
   },
+    "homepage": "https://astrotomic.info",
   "minimum-stability": "stable",
   "support": {
-    "email": "dev.gummibeer@gmail.com",
-    "issues": "https://github.com/Gummibeer/laravel-linfo/issues",
-    "source": "https://github.com/Gummibeer/laravel-linfo"
+    "email": "dev@astrotomic.info",
+    "issues": "https://github.com/Astrotomic/laravel-linfo/issues",
+    "source": "https://github.com/Astrotomic/laravel-linfo"
   }
 }
