--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
   "require": {
     "php": "^7.3",
     "ext-json": "*",
-    "illuminate/contracts": "^7.0",
-    "illuminate/database": "^7.0",
-    "illuminate/support": "^7.0",
+    "illuminate/contracts": "^7.0|^8.0",
+    "illuminate/database": "^7.0|^8.0",
+    "illuminate/support": "^7.0|^8.0",
     "linfo/linfo": "^4.0.2",
     "nesbot/carbon": "^2.0"
   },
